--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.talecrafter.animationimporter": "https://github.com/talecrafter/AnimationImporter.git?path=/Assets",
     "com.unity.collab-proxy": "1.15.13",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.12",
