--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,8 @@
         "**/*.cubemap":true,
         "**/*.flare":true,
         "**/*.mat":true,
+        "**/*.meta":true,
+        "**/*.prefab":true,
         "**/*.unity":true,
         "build/":true,
         "Build/":true,
