Adding Jetbrains Rider .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ crashlytics-build.properties
 
 # UserSettings
 /UserSettings/
+
+# Jetbrains
+.idea/*
+Assets/scripts/.idea/*
+ProjectSettings/RiderScriptEditorPersistedState.asset
